Generalize SSH options and remove autossh
sidedoor now passes along SSH arguments for flexibility.

This changes the configuration format to be of the form:

    OPTIONS=-N -R 8022:localhost:22

instead of TUNNEL_PORT and LOCAL_PORT.

Thus, multiple port forwards and forwards in both directions
are possible.

autossh has been replaced by a small while loop.

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/daradib/sidedoor
 
 Package: sidedoor
 Architecture: all
-Depends: ${misc:Depends}, adduser, systemd | upstart, autossh
+Depends: ${misc:Depends}, adduser, systemd | upstart
 Recommends: openssh-server
 Suggests: sidedoor-sudo
 Description: SSH connection daemon
