Start after network-online.target
Keep network.target for backwards-compatibility
with wheezy, which only has network.target.

--- a/debian/sidedoor.service
+++ b/debian/sidedoor.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=SSH connection daemon
-After=local-fs.target network.target
+After=local-fs.target network.target network-online.target
+Wants=network-online.target
 
 [Service]
 User=sidedoor
