--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: sidedoor
 Section: net
 Priority: optional
 Maintainer: Dara Adib <daradib@ocf.berkeley.edu>
-Build-Depends: debhelper (>= 9), dh-systemd
+Build-Depends: debhelper (>= 9), dh-systemd | debhelper (>= 9.20160709)
 Standards-Version: 3.9.6
 Homepage: https://github.com/daradib/sidedoor
 Vcs-Git: https://github.com/daradib/sidedoor.git
