Replace init script to fix systemd redirection
Work around #826214 and #826215 by using old skeleton boilerplate
instead of sourcing init-d-script.

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/daradib/sidedoor
 
 Package: sidedoor
 Architecture: all
-Depends: adduser, openssh-client, ${misc:Depends}
+Depends: adduser, lsb-base (>= 3.0-6), openssh-client, ${misc:Depends}
 Recommends: openssh-server
 Suggests: sidedoor-sudo
 Description: SSH connection daemon
