--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: sidedoor
 Section: net
 Priority: optional
 Maintainer: Dara Adib <daradib@ocf.berkeley.edu>
-Build-Depends: debhelper (>= 12~)
+Build-Depends: debhelper-compat (= 12)
 Standards-Version: 4.1.1
 Homepage: https://github.com/daradib/sidedoor
 Vcs-Git: https://github.com/daradib/sidedoor.git
