Remove constraints unnecessary since buster (oldstable)
* sidedoor: Drop versioned constraint on lsb-base (>= 3.0-6) in Depends.
* Remove 1 maintscript entries from 1 files.

Changes-By: deb-scrub-obsolete

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Rules-Requires-Root: no
 
 Package: sidedoor
 Architecture: all
-Depends: adduser, lsb-base (>= 3.0-6), openssh-client, ${misc:Depends}
+Depends: adduser, lsb-base, openssh-client, ${misc:Depends}
 Recommends: openssh-server
 Suggests: sidedoor-sudo
 Description: SSH connection daemon
